--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,8 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+/Visual Studio 2015
+/Zoppas.Core
+/Zoppas.IO
+/Zoppas.Vision
+/Calibration
